[tool.poetry]
name = "cambodia-dpl-navigator"
version = "0.1.0"
description = ""
authors = ["kroeungcyber"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
openai = "^1.35.13"
chromadb = "^0.5.3"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.6"
langchain = "^0.2.6"
tiktoken = "^0.7.0"
pypdf = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
